Feature Request #49 : Custom Endpoint with S3-Based Uploading+

--- a/libs/uploaders/s3based.ejs
+++ b/libs/uploaders/s3based.ejs
@@ -12,9 +12,9 @@
     <div class="autosave_whcs_input autosave_whcs_1">
         <div class="form-group">
             <label><div><span><%-lang['Endpoint']%></span></div>
-                    <div><select class="form-control" detail="use_whcs_size_limit" selector="h_whcs_endpoint">
+                    <div><select class="form-control" detail="use_whcs_endpoint_select" selector="h_whcs_endpoint">
                         <option value=""><%- lang['Custom Endpoint'] %></option>
-                        <option value="s3.wasabisys.com" selected>s3.wasabisys.com</option>
+                        <option value="s3.wasabisys.com" selected><%- lang['Wasabi Hot Cloud Storage'] %></option>
                     </select></div>
             </label>
         </div>
