--- a/web/libs/css/dash2.monitors.css
+++ b/web/libs/css/dash2.monitors.css
@@ -84,3 +84,20 @@ img.circle-img,div.circle-img{border-radius:50%;height:50px;width:50px}
 [status="1"] .btn[video="launch"],[data-status="1"] .btn[video="launch"]{background:#337ab7;border-color:#337ab7}
 [status="2"] .btn[launch="video"],[status="2"] .btn[video="launch"],[data-status="2"] .btn[video="launch"]{background:#a59100;border-color:#a59100}
 .signal.red{background:#c9302c}
+
+
+
+#monSectionStreamChannels,#monSectionInputMaps{margin-bottom: 15px;}
+#monSectionStreamChannels:empty,#monSectionInputMaps:empty{display:none}
+
+
+#monitors_list .monitor_block{transition:none}
+.dropdown-menu.scrollable{max-height:300px}
+.upload_file input{display:none}
+#video_preview .stream-objects{right:0;margin:auto;display:inline-block;position:relative;width:auto}
+.stream-block,.stream-objects{overflow: hidden!important}
+.stream-objects{position:absolute;top:0;left:0;width:100%;height:100%;z-index:10}
+.stream-objects .tag{position:absolute;bottom:100%;left:0;background:red;color:#fff;font-family:monospace;font-size:80%;border-radius:5px 5px 0 0 ;padding:3px 5px;}
+.stream-objects .stream-detected-object{position:absolute;top:0;left:0;border:3px solid red;background:transparent;border-radius:5px}
+.stream-objects .stream-detected-point{position:absolute;top:0;left:0;border:3px solid yellow;background:transparent;border-radius:5px}
+.stream-objects .point{position:absolute;top:0;left:0;border:3px solid red;border-radius:50%}
