--- a/web/libs/css/dash2.powervideo.css
+++ b/web/libs/css/dash2.powervideo.css
@@ -6,3 +6,13 @@
 #pvideo_viewer .bufferBar{position:absolute;left:0;top:0;opacity:0.4}
 #pvideo_viewer .timeBar{position:relative;z-index: 222;background:transparent}
 #pvideo_viewer h3{font-family:monospace}
+
+
+#vis_pwrvideo{height:250px}
+
+
+#vis_monitors{overflow:auto;max-height:400px}
+#vis_monitors .btn-group-vertical{width:100%}
+
+
+#motion_list{height:155px;overflow:auto;border-radius:5px;border:1px solid #444;position:relative;background: #222;margin:0}
