--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -16,19 +16,18 @@
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/gridstack.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/gridstack-extra.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/bootstrap-table.min.css">
-<!--
+
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.basic.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.monitors.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.forms.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.modal.css">
-<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.monitors.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.powervideo.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.ptzcontrols.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.regioneditor.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.rightotleft.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.timelapse.css">
-<link rel="stylesheet" href="<%-window.libURL%>libs/css/main.dash2.css">
--->
-<link rel="stylesheet" href="<%-window.libURL%>libs/css/main.dash2.old.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.sidemenu.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.darktheme.css">
 <% customAutoLoad.LibsCss.forEach(function(lib){ %>
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/<%-lib%>">
 <% }) %>
