--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.powervideo.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.ptzcontrols.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.regioneditor.css">
-<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.rightotleft.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.righttoleft.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.timelapse.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.sidemenu.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.darktheme.css">
