add more config parameters for branding on login

--- a/web/pages/index.ejs
+++ b/web/pages/index.ejs
@@ -18,7 +18,7 @@
                             <div class="panel-heading-shade">
                                 <div class="row">
                                     <div class="col-xs-12">
-                                        <a href="http://shinobi.video" target="_blank">
+                                        <a href="<%- config.logoLocation76x76Link %>" target="_blank">
                                             <img src="<%- logoImageLink %>" style="<%- config.logoLocation76x76Style %>">
                                         </a>
                                     </div>
