--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -11,11 +11,12 @@
     <link href="<%-window.libURL%>libs/css/montserrat.css" rel="stylesheet" />
     <link href="<%-window.libURL%>libs/css/font-awesome.min.css" rel="stylesheet" />
     <!-- CSS Files -->
-    <link href="<%-window.libURL%>libs/css/bootstrap4.min.css" rel="stylesheet" />
-    <link href="<%-window.libURL%>libs/css/main.dash2.css" rel="stylesheet" />
+    <link rel="stylesheet" href="<%-window.libURL%>libs/css/bootstrap4.min.css" />
+    <link rel="stylesheet" href="<%-window.libURL%>libs/css/main.dash2.css" />
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/pnotify.custom.min.css">
-    <link href="<%-window.libURL%>libs/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
-    <link href="<%-window.libURL%>libs/css/super-page.css" rel="stylesheet" />
+    <link rel="stylesheet" href="<%-window.libURL%>libs/css/now-ui-kit.css?v=1.1.0" />
+    <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.forms.css">
+    <link rel="stylesheet" href="<%-window.libURL%>libs/css/super-page.css" />
     <script src="<%-window.libURL%>libs/js/jquery.min.js"></script>
     <script src="<%-window.libURL%>libs/js/basic.js"></script>
     <script src="<%-window.libURL%>libs/js/jquery.serialize.js"></script>
