--- a/web/pages/blocks/timelapse.ejs
+++ b/web/pages/blocks/timelapse.ejs
@@ -78,4 +78,46 @@
     </div>
   </div>
 </div>
+<!--Timelapse Window-->
+<div class="modal full fade dark" id="timelapsejpeg" role="dialog" aria-labelledby="timelapsejpegLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title" id="timelapsejpegLabel"><i class="fa fa-angle-double-right"></i> &nbsp; <span><%-lang['Timelapse']%></span></h4>
+        </div>
+        <div class="modal-body text-center">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                      <label><div><span><%-lang['Monitor']%></span></div>
+                          <div><select class="form-control dark monitors_list"></select></div>
+                      </label>
+                    </div>
+                    <div class="form-group">
+                        <label><div><span><%-lang['Date']%></span></div>
+                            <div><input type="text" id="timelapsejpeg_date" class="form-control" value="" /></div>
+                        </label>
+                    </div>
+                    <div class="frames"></div>
+                </div>
+                <div class="col-md-8 contained">
+                    <div class="playBackView"><img></div>
+                    <div class="frames"></div>
+                    <div class="frameStrip"></div>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <div class="btn-group">
+                <button type="button" class="btn btn-default" data-dismiss="modal"><%-lang.Close%></button>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.timelapse.jpeg.css">
 <script src="<%-window.libURL%>libs/js/dash2.timelapse.js"></script>
+<script src="<%-window.libURL%>libs/js/dash2.timelapse.jpeg.js"></script>
