improve timelapse.jpeg appearance and performance

--- a/web/libs/css/dash2.basic.css
+++ b/web/libs/css/dash2.basic.css
@@ -409,7 +409,7 @@ ul.msg_list li .message {
 }
 
 .demo-drawer .mdl-menu__container{
-    height: 500px!important;
+    max-height: 500px!important;
     overflow-y: auto;
     overflow-x: hidden;
 }
