--- a/web/libs/css/dash2.timelapse.jpeg.css
+++ b/web/libs/css/dash2.timelapse.jpeg.css
@@ -12,12 +12,8 @@
     top:0;
     left:0;
 }
-#timelapsejpeg .contained{
-    position:relative;
-    height:100px;
-}
-#timelapsejpeg .row,
-#timelapsejpeg .row > div {
+#timelapsejpeg .modal-body > .row,
+#timelapsejpeg .modal-body > .row > div {
     position:relative;
     height: 100%;
 }
@@ -32,12 +28,45 @@
 }
 #timelapsejpeg .frameStrip{
     position:absolute;
-    height:10px;
-    width:100%;
+    height:30px;
+    width:90%;
+    margin:auto;
     bottom:0;
     left:0;
+    right:0;
     border-radius:5px;
     overflow:hidden;
+}
+#timelapsejpeg .frameStripPreview{
+    position:absolute;
+    height:80px;
+    width:100px;
+    border:3px solid #333;
+    border-radius:5px;
+    background-size: cover;
+    z-index: 10;
+    transition: none;
+    bottom: 40px;
+}
+#timelapsejpeg .frameIcons{
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+#timelapsejpeg .frameIcons .frame{
+    background-size: cover;
+    width: 100%;
+    height: 100px;
+    position: relative;
+    cursor: pointer;
+}
+#timelapsejpeg .frameIcons .frame .shade{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 5px 10px;
+    font-family: monospace;
+    background: rgba(0,0,0,0.6);
 }
 #timelapsejpeg .playBackView{
     position:absolute;
