--- a/web/pages/blocks/timelapse.ejs
+++ b/web/pages/blocks/timelapse.ejs
@@ -91,21 +91,24 @@
         <div class="modal-body text-center">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="form-group">
-                      <label><div><span><%-lang['Monitor']%></span></div>
-                          <div><select class="form-control dark monitors_list"></select></div>
-                      </label>
+                    <div class="fieldHolder">
+                        <div class="form-group">
+                          <label><div><span><%-lang['Monitor']%></span></div>
+                              <div><select class="form-control dark monitors_list"></select></div>
+                          </label>
+                        </div>
+                        <div class="form-group">
+                            <label><div><span><%-lang['Date']%></span></div>
+                                <div><input type="text" id="timelapsejpeg_date" class="form-control" value="" /></div>
+                            </label>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label><div><span><%-lang['Date']%></span></div>
-                            <div><input type="text" id="timelapsejpeg_date" class="form-control" value="" /></div>
-                        </label>
-                    </div>
-                    <div class="frames"></div>
+                    <div class="frameIcons row"></div>
                 </div>
-                <div class="col-md-8 contained">
+                <div class="col-md-8 frameStripContainer contained">
                     <div class="playBackView"><img></div>
                     <div class="frames"></div>
+                    <div class="frameStripPreview"></div>
                     <div class="frameStrip"></div>
                 </div>
             </div>
