--- a/web/libs/css/dash2.timelapse.jpeg.css
+++ b/web/libs/css/dash2.timelapse.jpeg.css
@@ -67,6 +67,7 @@
     padding: 5px 10px;
     font-family: monospace;
     background: rgba(0,0,0,0.6);
+    color: #fff
 }
 #timelapsejpeg .playBackView{
     position:absolute;
