Some Updates and Fixes
- Add Branding Engine
- Lock PM2 install to 3.0.0 (newer versions cannot catch `uncaughtException`.
- Update macOS installer
- Update OpenALPR (CPU) installer
- Add Portuguese Language
- Fix Language Selector
- Lay-In ability to create Matrix from Pam-Diff detection blob
- createEventBasedRecording called for Traditional Recording labelled 5 seconds before real time to capture event
- fix NaN for new user created in Superuser
- count space used for Timelapse Frames and Files tables (does not purge Timelapse data yet)
- Update TimelapseJpeg, lay-in MP4 builder, many fixes, additonal page
- add `impervious` to gitignore in `web/libs` for custom static files
- Fix delete button for quick video list
- Fix Super form appearance

--- a/web/pages/blocks/header-favicon.ejs
+++ b/web/pages/blocks/header-favicon.ejs
@@ -1,11 +1,11 @@
 <%
 if(!window.libURL)window.libURL = originalURL
  %>
-<link rel="icon" href="<%-window.libURL%>libs/img/icon/favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="<%-window.libURL%>libs/img/icon/favicon.ico" type="image/x-icon" />
+<link rel="icon" href="<%-window.libURL%><%-config.webFavicon%>" type="image/x-icon" />
+<link rel="shortcut icon" href="<%-window.libURL%><%-config.webFavicon%>" type="image/x-icon" />
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="apple-mobile-web-app-title" content="Shinobi">
+<meta name="apple-mobile-web-app-title" content="<%-config.webPageTitle%>">
 <link rel="apple-touch-icon" href="<%-window.libURL%>libs/img/icon/apple-touch-icon.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="<%-window.libURL%>libs/img/icon/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon" sizes="72x72" href="<%-window.libURL%>libs/img/icon/apple-touch-icon-72x72.png" />
