--- a/web/libs/css/dash2.timelapse.jpeg.css
+++ b/web/libs/css/dash2.timelapse.jpeg.css
@@ -76,3 +76,39 @@
     top:0;
     left:0;
 }
+#timelapsejpeg .playBackView img{
+    width:calc(100% - 40px)
+}
+/* stand alone */
+#timelapsejpeg.standalone {
+    background: #2f2f2f;
+    color:#fff;
+}
+#timelapsejpeg.standalone .fieldHolder{
+    padding-top: 20px;
+}
+.scroll-style-6::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #333;
+    border-radius: 15px;
+}
+
+.scroll-style-6::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #333;
+}
+
+.scroll-style-6::-webkit-scrollbar-thumb
+{
+	background-color: #555;
+	background-image: -webkit-linear-gradient(45deg,
+	                                          rgba(255, 255, 255, .2) 25%,
+											  transparent 25%,
+											  transparent 50%,
+											  rgba(255, 255, 255, .2) 50%,
+											  rgba(255, 255, 255, .2) 75%,
+											  transparent 75%,
+											  transparent)
+}
