--- a/web/pages/index.ejs
+++ b/web/pages/index.ejs
@@ -6,7 +6,7 @@
     	<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<div class="panel panel-login">
-                    <% if(config.showLoginCardHeader){
+                    <% if(config.showLoginCardHeader === true){
                         var logoImageLink
                         if(config.logoLocation76x76.indexOf('//') === -1){
                             logoImageLink = window.libURL + config.logoLocation76x76
@@ -45,36 +45,52 @@
 									<div class="form-group f_i_input f_i_ldap" style="display:none">
 										<input name="key" id="key" tabindex="2" class="monospace form-control" placeholder="Group Key">
 									</div>
-									<div class="form-group">
-									<div class="row">
-                                        <div class="col-md-12 monospace" style="width:calc(100% - 48px)">
-                                            <select class="form-control" name="function" selector="f_i">
-                                                <% switch(screen){
-                                                    case'super': %>
-                                                <option value="super"><%- lang.Superuser %></option>
-                                                <% break;
-                                                    case'admin': %>
-                                                <option value="admin"><%- lang.Admin %></option>
-                                                <% break;
-                                                    default: %>
-                                                <option value="dash" selected><%- lang.Dashboard %></option>
-                                                <% if(config.productType==='Pro'){ %>
-                                                <option value="ldap"><%- lang.LDAP %></option>
-                                                <% } %>
-                                                <option value="streamer"><%- lang.Streamer %></option>
-                                                <option value="cam"><%- lang.Dashcam %> (<%- lang.Streamer %> v2)</option>
-                                                <% break;
-                                                } %>
-                                            </select>
-                                        </div>
-                                        <div class="text-right" title="<%- lang['Remember Me'] %>" style="display:inline-block">
-                                            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="remember_me">
-                                              <input type="checkbox" id="remember_me" value="1" name="remember" class="mdl-switch__input">
-                                                <span class="monospace mdl-switch__label"></span>
-                                            </label>
-                                        </div>
-									</div>
-									</div>
+                                    <% if(config.showLoginSelector === true){ %>
+    									<div class="form-group">
+    									<div class="row">
+                                            <div class="col-md-12 monospace" style="width:calc(100% - 48px)">
+                                                <select class="form-control" name="function" selector="f_i">
+                                                    <% switch(screen){
+                                                        case'super': %>
+                                                    <option value="super"><%- lang.Superuser %></option>
+                                                    <% break;
+                                                        case'admin': %>
+                                                    <option value="admin"><%- lang.Admin %></option>
+                                                    <% break;
+                                                        default: %>
+                                                    <option value="dash" selected><%- lang.Dashboard %></option>
+                                                    <% if(config.productType==='Pro'){ %>
+                                                    <option value="ldap"><%- lang.LDAP %></option>
+                                                    <% } %>
+                                                    <option value="streamer"><%- lang.Streamer %></option>
+                                                    <option value="cam"><%- lang.Dashcam %> (<%- lang.Streamer %> v2)</option>
+                                                    <% break;
+                                                    } %>
+                                                </select>
+                                            </div>
+                                            <div class="text-right" title="<%- lang['Remember Me'] %>" style="display:inline-block">
+                                                <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="remember_me">
+                                                  <input type="checkbox" id="remember_me" value="1" name="remember" class="mdl-switch__input">
+                                                    <span class="monospace mdl-switch__label"></span>
+                                                </label>
+                                            </div>
+    									</div>
+    									</div>
+                                    <% }else{ %>
+                                        <select class="form-control" name="function" style="display:none">
+                                            <% switch(screen){
+                                                case'super': %>
+                                            <option value="super"><%- lang.Superuser %></option>
+                                            <% break;
+                                                case'admin': %>
+                                            <option value="admin"><%- lang.Admin %></option>
+                                            <% break;
+                                                default: %>
+                                            <option value="dash" selected><%- lang.Dashboard %></option>
+                                            <% break;
+                                            } %>
+                                        </select>
+                                    <% } %>
 									<div class="form-group" style="margin:0">
                                         <button type="submit" name="login-submit" id="login-submit" tabindex="4" class="btn btn-success btn-block"><%- lang.Login %></button>
 									</div>
