--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/main.dash2.css" />
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/pnotify.custom.min.css">
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/now-ui-kit.css?v=1.1.0" />
+    <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.basic.css">
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.forms.css">
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/super-page.css" />
     <script src="<%-window.libURL%>libs/js/jquery.min.js"></script>
