--- a/web/pages/blocks/header-meta.ejs
+++ b/web/pages/blocks/header-meta.ejs
@@ -2,4 +2,4 @@
 <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no" />
 <meta name="description" content="Shinobi, Open Source CCTV Technology">
-<meta name="author" content="Moe Alam, moeiscool on GitHub">
+<meta name="author" content="Moe Alam of Shinobi Systems">
