Packging, addStorage Max Amounts, Fix s3uploader and minor fixes
- Add ability to pacakge with `pkg`
- Add Max Storage Amount for each `addStorage` storage array per user
- Fix `uploaders/s3based.js` variable names
- Update Timelapse.jpeg video builder
- Allow rendering a separate page upon login for Sub-Accounts

--- a/web/libs/css/dash2.basic.css
+++ b/web/libs/css/dash2.basic.css
@@ -413,3 +413,7 @@ ul.msg_list li .message {
     overflow-y: auto;
     overflow-x: hidden;
 }
+/*  */
+.slider.slider-horizontal {
+    width:100%!important
+}
