--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -4,6 +4,7 @@
 <% include blocks/header %>
 <script>var $user = <%- JSON.stringify($user) %>;</script>
 <script>var lang = <%- JSON.stringify(lang) %>;</script>
+<script>var addStorage = <%- JSON.stringify(addStorage) %>;</script>
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/material-design-iconic-font.min.css" type="text/css" />
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/pnotify.custom.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/vbox.css">
@@ -15,6 +16,7 @@
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/gridstack.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/gridstack-extra.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/bootstrap-table.min.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/bootstrap-slider.min.css">
 
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.basic.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.monitors.css">
@@ -201,6 +203,7 @@
 <script src="<%-window.libURL%>libs/js/fullcalendar.min.js"></script>
 <script src="<%-window.libURL%>libs/js/hls.min.js"></script>
 <script src="<%-window.libURL%>libs/js/libde265.min.js"></script>
+<script src="<%-window.libURL%>libs/js/bootstrap-slider.min.js"></script>
 <script type="text/javascript" src="<%-window.libURL%>libs/js/flv.shinobi.js">;</script>
 <script src="<%-window.libURL%>libs/js/menu.js"></script>
 <script src="<%-window.libURL%>libs/js/clock.js"></script>
